--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -98,7 +98,9 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 200px);
         height: 100vh;
-        overflow: scroll;
+        @media screen and (max-height: 660px) {
+            overflow-y: scroll;
+        }
     }
 
     .selected {
